[package]
name = "bevy_power"
version = "0.1.1"
edition = "2021"
authors = ["Piotr Świercz <tajo48@proton.me>"]
license = "MIT"
description = "A comprehensive power/energy system for Bevy games with regeneration, limits, knockouts, leveling, and UI components"
repository = "https://github.com/piotrswierczek/bevy_power"
keywords = ["bevy", "gamedev", "power", "energy", "ui"]
categories = ["game-development", "gui"]

[dependencies]
bevy = "0.17.2"

[[example]]
name = "power_demo"
path = "examples/power_demo.rs"

[[example]]
name = "dash_demo"
path = "examples/dash_demo.rs"
